--- a/F1App/F1App.WebUI/F1App.WebUI.csproj
+++ b/F1App/F1App.WebUI/F1App.WebUI.csproj
@@ -373,15 +373,19 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PilotJsonOptionController.cs" />
     <Compile Include="Controllers\PilotController.cs" />
     <Compile Include="Controllers\PilotStandingController.cs" />
     <Compile Include="Controllers\ResultController.cs" />
     <Compile Include="Controllers\TeamController.cs" />
+    <Compile Include="Controllers\TeamJsonOptionController.cs" />
     <Compile Include="Controllers\TeamStandingController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\NinjectDependencyResolver.cs" />
+    <Compile Include="Models\PilotJsonOptionsViewModel.cs" />
+    <Compile Include="Models\TeamJsonOptionsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -396,6 +400,8 @@
     <Content Include="Views\Result\List.cshtml" />
     <Content Include="Views\TeamStanding\List.cshtml" />
     <Content Include="Views\PilotStanding\List.cshtml" />
+    <Content Include="Views\PilotJsonOption\ShowOptions.cshtml" />
+    <Content Include="Views\TeamJsonOption\ShowOptions.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -405,7 +411,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\F1App.Domain\F1App.Domain.csproj">
